[tool.poetry]
name = "monitoress"
version = "0.1.0"
description = ""
authors = ["Ress"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
fastapi-utils = "^0.2.1"
APScheduler = "^3.8.1"
redis = "^4.3.4"
loguru = "^0.6.0"
emoji = "^2.1.0"
aiohttp = "^3.8.3"
requests = "^2.28.1"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
oitnb = "^0.2.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python src/main.py"