[tool.poetry]
name = "monitoress"
version = "0.1.0"
description = ""
authors = ["Ress"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
APScheduler = "^3.10.4"
redis = "^5.0.1"
loguru = "^0.7.2"
emoji = "^2.10.1"
aiohttp = "^3.9.3"
requests = "^2.31.0"
pydantic = "^2.6.1"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
oitnb = "^0.2.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python src/main.py"