[project]
name = "monitoress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "apscheduler>=3.11.0",
    "emoji>=2.14.1",
    "fastapi>=0.115.12",
    "fastapi-restful>=0.6.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
